# practica4_vision

./: .gitignore  GUIA_EVIDENCIAS_LAB.md  Practica4_1A_FruitSegmentation.ipynb  README_LAB.md  informe_practica4.tex  practica4_1B_superres_benchmark.py  practica4_1B_yolo_benchmark.py  requirements_lab.txt  setup_env.bat  setup_env.sh
parte1c_cpp/: CMakeLists.txt  build.sh  main.cpp
practica4_1A_export/: webcam_fruit_seg.py
